# Gendiff

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: nested_json_plain
gendiff/: bool_transformer.py  dict_comparator.py  diff_generator.py  json_parser.py  parser.py  status_constants.py  yaml_parser.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_bool_transformer.py  test_dict_comparator.py  test_diff_generator.py  test_json_parser.py  test_parser.py  test_yaml_parser.py
tests/fixtures/: expected.py
tests/fixtures/test_formatters/: test_stylish.py
tests/test_formatters/: test_plain.py  test_stylish.py
